--- a/packages/desktop-app/src/assets/scss/dark-theme.scss
+++ b/packages/desktop-app/src/assets/scss/dark-theme.scss
@@ -521,4 +521,8 @@ body.dark-theme {
   .selected i.fa-circle.active {
     color: #64D1B9 !important;
   }
+
+  .workspace-menu-icon {
+    filter: invert(1);
+  }
 }
