--- a/packages/desktop-app/src/app/components/side-bar/side-bar.component.scss
+++ b/packages/desktop-app/src/app/components/side-bar/side-bar.component.scss
@@ -173,12 +173,26 @@ i.moon-Caret-down {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+
+    span {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      width: 180px;
+    }
+
     span:nth-child(1) {
       font-size: 15px;
+      line-height: initial;
+      padding-left: 10px;
     }
+
     span:nth-child(2) {
       font-size: 12px;
       color: $table-text;
+      line-height: initial;
+      padding-left: 10px;
+      padding-top: 2px;
     }
   }
 
