chore: removed unused element in login team dialog

--- a/packages/desktop-app/src/app/components/dialogs/login-team-dialog/login-team-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/login-team-dialog/login-team-dialog.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <!-- TODO: add a link to the Get Help page -->
-      <div class="form-help"><img src="assets/images/question-fill.svg" alt="get-help"><a>Get Help</a></div>
+      <!-- <div class="form-help"><img src="assets/images/question-fill.svg" alt="get-help"><a>Get Help</a></div> -->
 
     </fieldset>
     <div class="signin-modal-bottom">
