feat: added select all mac shortcut on all input fields

--- a/packages/desktop-app/src/app/components/dialogs/ssm-modal-dialog/ssm-modal-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/ssm-modal-dialog/ssm-modal-dialog.component.html
@@ -23,7 +23,7 @@
           <div class="form-field">
             <div class="form-group">
               <label>Select an Instance</label>
-              <input class="form-control" type="text" placeholder="searchFilter by..." (keyup)="searchSSMInstance($event)"/>
+              <input (keydown.meta.a)="$event.target.select()" spellcheck="false" class="form-control" type="text" placeholder="searchFilter by..." (keyup)="searchSSMInstance($event)"/>
             </div>
           </div>
         </div>
