--- a/packages/desktop-app/src/app/components/dialogs/create-dialog/create-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/create-dialog/create-dialog.component.html
@@ -76,7 +76,7 @@
       <!-- ================================================================== -->
       <div class="form-field">
         <label>Session Alias</label>
-        <input (keydown.meta.a)="$event.target.select()" spellcheck="false" formControlName="name" type="text" class="form-control" placeholder="Session Alias *">
+        <input spellcheck="false" formControlName="name" type="text" class="form-control" placeholder="Session Alias *">
         <small class="text-error" *ngIf="(form.controls['name'].dirty || form.controls['name'].touched) && form.controls['name'].errors">Insert a Session Alias</small>
       </div>
 
@@ -98,7 +98,7 @@
         <ng-container *ngIf="sessionType === eSessionType.awsIamRoleFederated || sessionType === eSessionType.awsIamRoleChained">
           <div class="form-field">
             <label>Role ARN</label>
-            <input (keydown.meta.a)="$event.target.select()" spellcheck="false" formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
+            <input spellcheck="false" formControlName="roleArn" type="text" class="form-control" placeholder="Role ARN" />
             <small class="text-error" *ngIf="(form.controls['roleArn'].dirty || form.controls['roleArn'].touched) && form.controls['roleArn'].errors">Insert the Role ARN</small>
           </div>
         </ng-container>
@@ -125,7 +125,7 @@
 
           <div class="form-field">
             <label>Identity Provider</label>
-            <input (keydown.meta.a)="$event.target.select()" spellcheck="false" formControlName="idpArn" type="text" class="form-control" placeholder="Identity Provider ARN *">
+            <input spellcheck="false" formControlName="idpArn" type="text" class="form-control" placeholder="Identity Provider ARN *">
             <small class="text-error" *ngIf="(form.controls['idpArn'].dirty || form.controls['idpArn'].touched) && form.controls['idpArn'].errors">Insert the AWS Identity Provider ARN</small>
           </div>
         </ng-container>
@@ -135,7 +135,7 @@
         <!-- ================================================================== -->
         <div class="form-field" *ngIf="sessionType === eSessionType.awsIamUser">
           <label>Mfa Device</label>
-          <input (keydown.meta.a)="$event.target.select()" spellcheck="false" formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA ARN or SN (optional)" />
+          <input spellcheck="false" formControlName="mfaDevice" type="text" class="form-control" placeholder="MFA ARN or SN (optional)" />
         </div>
 
         <!-- ================================================================== -->
@@ -160,7 +160,7 @@
         <ng-container *ngIf="sessionType === eSessionType.awsIamRoleChained">
           <div class="form-field">
             <label>Role Session Name</label>
-            <input (keydown.meta.a)="$event.target.select()" spellcheck="false" formControlName="roleSessionName" type="text" class="form-control" placeholder="Role Session Name" />
+            <input spellcheck="false" formControlName="roleSessionName" type="text" class="form-control" placeholder="Role Session Name" />
             <small class="text-error" *ngIf="(form.controls['roleSessionName'].dirty || form.controls['roleSessionName'].touched) && form.controls['roleSessionName'].errors">Invalid Role Session Name</small>
           </div>
           <div class="form-field">
