chore: fixed manage workspaces menu icon style and mat-menu backdrop

--- a/packages/desktop-app/src/app/components/dialogs/manage-team-workspaces-dialog/manage-team-workspaces-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/manage-team-workspaces-dialog/manage-team-workspaces-dialog.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 
-<mat-menu #manageWorkspacesActionsMenu="matMenu" [hasBackdrop]="false" role="menu">
+<mat-menu #manageWorkspacesActionsMenu="matMenu" [hasBackdrop]="true" role="menu">
   <span mat-menu-item class="not-displayed">dummy fix for github issue 3352</span>
   <div mat-menu-item (click)="syncWorkspace()">
     <img class="workspace-menu-icon" src="assets/images/arrows-clockwise-fill.svg" alt="sync">
